--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="minutes" class="time">00 <span>daqiqalar</span></div>
         <div id="seconds" class="time">00 <span>soniyalar</span></div>
     </div>
-    <audio autoplay loop>
+    <audio autoplay>
         <source src="audio.mp3" type="audio/mpeg">
     </audio>
 </div>
