--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <div id="minutes" class="time">00 <span>daqiqalar</span></div>
         <div id="seconds" class="time">00 <span>soniyalar</span></div>
     </div>
-    <audio autoplay>
+    <audio autoplay loop>
         <source src="audio.mp3" type="audio/mpeg">
+        m
     </audio>
 </div>
 <script src="script.js"></script>
